--- a/uoit/imaginglab/cpanel/CPanel/CPanel.csproj
+++ b/uoit/imaginglab/cpanel/CPanel/CPanel.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2F8499D9-7DB1-42D0-A935-153BF344B759}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ImaginLab.CPanel</RootNamespace>
+    <RootNamespace>ImagingLab.CPanel</RootNamespace>
     <AssemblyName>CPanel</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -100,6 +100,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="cpanel.snk" />
+    <None Include="Properties\DataSources\People.datasource" />
+    <None Include="Properties\DataSources\Publication.datasource" />
+    <None Include="Properties\DataSources\Teaching.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
