--- a/uoit/imaginglab/cpanel/CPanel/CPanel.csproj
+++ b/uoit/imaginglab/cpanel/CPanel/CPanel.csproj
@@ -181,6 +181,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="cpanel.ico" />
+    <None Include="Resources\upload.png" />
+    <None Include="Resources\cancel3.png" />
+    <None Include="Resources\upload1.png" />
+    <None Include="Resources\cancel2.png" />
+    <None Include="Resources\cancel1.png" />
+    <None Include="Resources\cancel.png" />
     <None Include="Resources\noimage.png" />
     <None Include="Resources\title.png" />
   </ItemGroup>
