--- a/uoit/imaginglab/cpanel/CPanel/CPanel.csproj
+++ b/uoit/imaginglab/cpanel/CPanel/CPanel.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\SortableBindingList.cs" />
     <Compile Include="Application\CPanelApp.cs" />
     <Compile Include="Application\CPanelTextBox.cs">
       <SubType>Component</SubType>
