--- a/uoit/imaginglab/cpanel/CPanel/CPanel.csproj
+++ b/uoit/imaginglab/cpanel/CPanel/CPanel.csproj
@@ -36,6 +36,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>0</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -73,12 +74,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application\AppSettings.cs" />
     <Compile Include="Application\SortableBindingList.cs" />
     <Compile Include="Application\CPanelApp.cs" />
     <Compile Include="Application\CPanelTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Application\DataObjects.cs" />
+    <Compile Include="FluentFTP\Client\FtpClient_Connection.cs" />
+    <Compile Include="FluentFTP\Client\FtpClient_Hash.cs" />
+    <Compile Include="FluentFTP\Client\FtpClient_HighLevel.cs" />
+    <Compile Include="FluentFTP\Client\FtpClient_Listing.cs" />
+    <Compile Include="FluentFTP\Client\FtpClient_LowLevel.cs" />
+    <Compile Include="FluentFTP\Client\FtpClient_Management.cs" />
+    <Compile Include="FluentFTP\Helpers\FtpEnums.cs" />
+    <Compile Include="FluentFTP\Helpers\FtpEvents.cs" />
+    <Compile Include="FluentFTP\Helpers\FtpExceptions.cs" />
+    <Compile Include="FluentFTP\Helpers\FtpHash.cs" />
+    <Compile Include="FluentFTP\Helpers\FtpListItem.cs" />
+    <Compile Include="FluentFTP\Helpers\FtpListParser.cs" />
+    <Compile Include="FluentFTP\Helpers\FtpReply.cs" />
+    <Compile Include="FluentFTP\Helpers\FtpTrace.cs" />
+    <Compile Include="FluentFTP\Proxy\FtpClientHttp11Proxy.cs" />
+    <Compile Include="FluentFTP\Proxy\FtpClientProxy.cs" />
+    <Compile Include="FluentFTP\Proxy\FtpClientUserAtHostProxy.cs" />
+    <Compile Include="FluentFTP\Proxy\ProxyInfo.cs" />
+    <Compile Include="FluentFTP\Stream\FtpDataStream.cs" />
+    <Compile Include="FluentFTP\Stream\FtpSocketStream.cs" />
+    <Compile Include="FluentFTP\Stream\FtpSslStream.cs" />
+    <Compile Include="FluentFTP\Utils\FtpExtensions.cs" />
+    <Compile Include="FluentFTP\Utils\FtpReflection.cs" />
+    <Compile Include="FluentFTP\Utils\NET2Compatibility.cs" />
+    <Compile Include="Forms\CredentialsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CredentialsForm.Designer.cs">
+      <DependentUpon>CredentialsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +137,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\CredentialsForm.resx">
+      <DependentUpon>CredentialsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
